# bdm

./: .appveyor.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
bdm/: bdm.h  computations.h  config.h  determinant.h  inverse.h  mat.h  mat.inl  transforms.h  types.h  vec.h  vec.inl
benchmarks/: CMakeLists.txt  bdm_bench.cpp
tests/: CMakeLists.txt  computations_test.cpp  mat_test.cpp  test_ext.h  transforms_test.cpp  vec_test.cpp
